--- a/basic-react-components/6.8.md
+++ b/basic-react-components/6.8.md
@@ -1,14 +1,14 @@
 # Accessing Children Components/Nodes
 
-If a component, when used, contains child components or React nodes inside of the component (e.g. `<Parent><Child /></Parent>` or `<Parent><span>test<span></Parent>`) these React node or component instances can be accessed by using `this.props.children`.
+If a component, when used, contains child components or React nodes inside of the component (e.g., `<Parent><Child /></Parent>` or `<Parent><span>test<span></Parent>`) these React node or component instances can be accessed by using `this.props.children`.
 
 In the code below the `Parent` component when used, contains two `<div>` React node children, which contains React text nodes. All of the children instances, inside of the component are accessible using `this.props.children`. In the code below I access these children inside of the `Parent` `componentDidMount` lifecycle function.
 
 > [source code](https://jsfiddle.net/codylindley/z7u11n44/#tabs=js,result,html,resources)
 
-The `this.props.children` of the `Parent` component instance returns an array containing the references to the child React node instances. This array is logged out to the console. Additionally, in the `Parent` component I am logging out the child of the first `<div>` (i.e. a text node).
+The `this.props.children` of the `Parent` component instance returns an array containing the references to the child React node instances. This array is logged out to the console. Additionally, in the `Parent` component I am logging out the child of the first `<div>` (i.e., a text node).
 
-Note how when I use the `Parent2` component inside of the `Parent` component the child React node of `Parent2` only contains one `<span>` React node (i.e. `<span>child2text</span>`). Thus, `this.props.children` used in `componentDidMount` lifecycle function for `Parent2` component will be a direct reference to this `<span>` React node (i.e. not an array containing a single reference).
+Note how when I use the `Parent2` component inside of the `Parent` component the child React node of `Parent2` only contains one `<span>` React node (i.e., `<span>child2text</span>`). Thus, `this.props.children` used in `componentDidMount` lifecycle function for `Parent2` component will be a direct reference to this `<span>` React node (i.e., not an array containing a single reference).
 
 Given that `this.props.children` can potentially contain a wide set of nodes and components React provides a set of utilities to deal with this data structure. These utilities are listed below.
 
