--- a/react-jsx/5.1.md
+++ b/react-jsx/5.1.md
@@ -73,10 +73,10 @@ The idea of mixing HTML and JavaScript in the same file can be a rather contenti
 
 #### Notes
 
-* Don't think of JSX as a template but instead as a special/alternative JS syntax that has to be compiled. i.e. JSX is simply converting XML-like markup into JavaScript.
+* Don't think of JSX as a template but instead as a special/alternative JS syntax that has to be compiled. I.e., JSX is simply converting XML-like markup into JavaScript.
 * The Babel tool is a [subjective selection](https://facebook.github.io/react/blog/2015/09/10/react-v0.14-rc1.html#compiler-optimizations) from the React team for transforming ES* code and JSX syntax to ES5 code. You can learn more about Babel at [http://babeljs.io/](http://babeljs.io/) or by reading the [Babel handbook](https://github.com/thejameskyle/babel-handbook/blob/master/translations/en/user-handbook.md).
 * The merits of JSX in four bullet points:
-    * Less technical people can still understand and modify the required parts. CSS developers and designers will find JSX more familiar than JavaScript alone. i.e. HTML markup looks like HTML markup.
+    * Less technical people can still understand and modify the required parts. CSS developers and designers will find JSX more familiar than JavaScript alone. I.e., HTML markup looks like HTML markup.
     * You can leverage the full power of JavaScript in HTML and avoid learning or using a templating language. JSX is not a templating solution. It is a declarative syntax used to express a tree structure of UI components.
     * By adding a JSX transformation step you'll find errors in your HTML you might otherwise miss.
     * JSX promotes the idea of inline styles. Which can be a good thing.
