--- a/react-jsx/5.8.md
+++ b/react-jsx/5.8.md
@@ -10,7 +10,7 @@ The above code written using JSX:
 
 > [source code](https://jsfiddle.net/tvmqwuu1/#tabs=js,result,html,resources)
 
-Note that we are using the `{ }` brackets to connect a JS function to an event (i.e. `onMouseOver={mouseOverHandler}`). This style of adding events to nodes mimics the [DOM 0 style of inlining events on HTML elements](http://stackoverflow.com/questions/5642659/what-is-the-difference-between-dom-level-0-events-vs-dom-level-2-events).
+Note that we are using the `{ }` brackets to connect a JS function to an event (i.e., `onMouseOver={mouseOverHandler}`). This style of adding events to nodes mimics the [DOM 0 style of inlining events on HTML elements](http://stackoverflow.com/questions/5642659/what-is-the-difference-between-dom-level-0-events-vs-dom-level-2-events).
 
 React supports the following events and event specific syntheticEvent properties:
 
@@ -154,7 +154,7 @@ shiftKey,
 #### Notes
 
 * React normalizes events so that they behave consistently across different browsers.
-* Events in React are triggered on the bubbling phase. To trigger an event on the capturing phase add the word "Capture" to the event name (e.g. `onClick` would become `onClickCapture`).
+* Events in React are triggered on the bubbling phase. To trigger an event on the capturing phase add the word "Capture" to the event name (e.g., `onClick` would become `onClickCapture`).
 * If you need the browser event details for a given event you can access this by using the `nativeEvent` property found in the SyntheticEvent object passed into React event hander/callbacks.
 * React does not actually attach events to the nodes themselves, it uses [event delegation](http://domenlightenment.com/#11.14).
 * `e.stopPropagation()` or `e.preventDefault()` should be triggered manually to [stop](http://domenlightenment.com/#11.9) event [propagation](http://domenlightenment.com/#11.10) instead of `returning false;`.
