--- a/react-nodes/4.2.md
+++ b/react-nodes/4.2.md
@@ -2,7 +2,7 @@
 
 In most cases developers using React will favor JSX and use it to create React nodes. Regardless of this fact in this chapter we are going to examine how React nodes can be created without JSX, using only JavaScript. The next chapter will discuss creating React nodes using JSX.
 
-Creating React nodes using JavaScript is as simple as calling the `React.createElement(type,props,children)` function and passing it a set of arguments defining an actual DOM node (e.g. type = an html element e.g., `<li>` or custom element e.g., `<my-li>`).
+Creating React nodes using JavaScript is as simple as calling the `React.createElement(type,props,children)` function and passing it a set of arguments defining an actual DOM node (e.g., type = an html element e.g., `<li>` or custom element e.g., `<my-li>`).
 
 The `React.createElement()` arguments are explained below:
 
