--- a/react-props/7.6.md
+++ b/react-props/7.6.md
@@ -58,7 +58,7 @@ These validators check to see if the prop is a specific JS primitive. By default
 <table>
   <tr>
     <td><code>React.PropTypes.[TYPE].isRequired</code></td>
-    <td>Chaining the <code>.isRequired</code> on to any type validation to make sure the prop is provided (e.g. <code>propTypes:{propFunc:React.PropTypes.func.isRequired}</code> )</td>
+    <td>Chaining the <code>.isRequired</code> on to any type validation to make sure the prop is provided (e.g., <code>propTypes:{propFunc:React.PropTypes.func.isRequired}</code> )</td>
   </tr>
 </table>
 
