--- a/react-state/8.1.md
+++ b/react-state/8.1.md
@@ -1,6 +1,6 @@
 # What Is Component State?
 
-Most components should simply take in props and render. But, components also offer state, and it is used to store information about the component that can change over time. Typically the change comes as a result of user events or system events (i.e. as a response to user input, a server request or the passage of time).
+Most components should simply take in props and render. But, components also offer state, and it is used to store information about the component that can change over time. Typically the change comes as a result of user events or system events (i.e., as a response to user input, a server request or the passage of time).
 
 According to the React documentation state should:
 
@@ -9,8 +9,8 @@ According to the React documentation state should:
 Things to keep in mind about React component state:
 
 1. If a component has a state a default state should be providing using `getInitialState()`
-2. State changes are typically how you start the re-rendering of a component and all sub components (i.e. children, grandchildren, great grand chidlren etc...).
+2. State changes are typically how you start the re-rendering of a component and all sub components (i.e., children, grandchildren, great grand chidlren etc...).
 3. You inform a component of a state change by using `this.setState()` to set a new state.
-4. A state change merges new data with old data that is already contained in the state (i.e. `this.state`)
+4. A state change merges new data with old data that is already contained in the state (i.e., `this.state`)
 4. A state change, internally deals with calling re-renders. You should never have to call `this.render()` directly.
 5. The state object should only contain the minimal amount of data needed for the UI. Don't place computed data, other React components, or props in the state object.
