--- a/basic-react-components/6.2.md
+++ b/basic-react-components/6.2.md
@@ -84,7 +84,7 @@ Make sure you read the comments in the code.
 
 It looks like a lot of code. However, the bulk of the code simply involves creating a `<Timer/>` component and then passing the `createClass()` function creating the component a configuration object containing 5 properties (`getInitialState`, `tick`, `componentDidMount`, `componentWillUnmount`, `render`).
 
-Notice that `Timer` is capitalized. When creating custom React components you need to capitalize the name of the component. Additionally, the value `this` among the configuration options refers to the component instance created. We'll discuss the component API in more detail at the end of this chapter. For now, just meditate on the configuration options available when defining a React component and how a reference to the component is achieved using the `this` keyword. Also note, that in the code example above I added my own custom instance method (i.e. `tick`) during the creation of the `<Timer/>` component.
+Notice that `Timer` is capitalized. When creating custom React components you need to capitalize the name of the component. Additionally, the value `this` among the configuration options refers to the component instance created. We'll discuss the component API in more detail at the end of this chapter. For now, just meditate on the configuration options available when defining a React component and how a reference to the component is achieved using the `this` keyword. Also note, that in the code example above I added my own custom instance method (i.e., `tick`) during the creation of the `<Timer/>` component.
 
 Once a component is mounted (i.e created) you can use the component API. The api contains four methods.
 
