--- a/react-props/7.3.md
+++ b/react-props/7.3.md
@@ -1,6 +1,6 @@
 # Getting Component Props
 
-As discussed in section 6.5 a component instance can be accessed from any configuration option that uses a function by way of the `this` keyword. For example, in the code below the `this` keyword is used to access the `Badge` `props` from the component `render` configuration option (i.e. `this.props.name`).
+As discussed in section 6.5 a component instance can be accessed from any configuration option that uses a function by way of the `this` keyword. For example, in the code below the `this` keyword is used to access the `Badge` `props` from the component `render` configuration option (i.e., `this.props.name`).
 
 ```
 var Badge = React.createClass({
@@ -12,7 +12,7 @@ var Badge = React.createClass({
 ReactDOM.render(<Badge name="Bill" />, document.getElementById('app'));
 ```
 
-Nothing that difficult to grasp is happening if you look at the transformed JavaScript (i.e. JSX to JS)
+Nothing that difficult to grasp is happening if you look at the transformed JavaScript (i.e., JSX to JS)
 
 ```
 var Badge = React.createClass({
