Additional formatting changes
See PR #10 for description

--- a/react-nodes/4.6.md
+++ b/react-nodes/4.6.md
@@ -4,7 +4,7 @@ React provides built-in shortcuts for creating commonly used HTML element nodes.
 
 > A ReactElement-factory is simply a function that generates a ReactElement with a particular type property.
 
-Using a built-in element factory (i.e. `React.DOM.li()`), the React element node `<li>one</li>` can be created like so:
+Using a built-in element factory (i.e., `React.DOM.li()`), the React element node `<li>one</li>` can be created like so:
 
 ```js
 // uses React.DOM.li(props, children);
