--- a/react-nodes/4.7.md
+++ b/react-nodes/4.7.md
@@ -29,7 +29,7 @@ timeStamp
 type
 ```
 
-Additionally properties are available depending upon the type/category of event that is used. For example the `onCick` syntheticEvent event also contains the following properties.
+Additionally properties are available depending upon the type/category of event that is used. For example the `onClick` syntheticEvent event also contains the following properties.
 
 ```
 altKey
