--- a/react-nodes/4.6.md
+++ b/react-nodes/4.6.md
@@ -15,7 +15,7 @@ instead of using:
 
 ```js
 // uses React.createElement(type, prop, children)
-var reactNodeLi = React.createElement('li', null, 'one');
+var reactNodeLi = React.createElement('li', {id:'li1'}, 'one');
 ```
 
 Below I list out all of the built in node factories:
@@ -35,4 +35,4 @@ path,pattern,polygon,polyline,radialGradient,rect,stop,svg,text,tspa
 #### Notes
 
 * If you are using JSX you might not ever use factories
-* [Custom factories](React has a built-in helper for you to create factories. It's effectively just: using `React.createFactory(type)` can be created if needed.
+* React has a built-in helper for you to create custom factories. It's effectively just: using [`React.createFactory(type)`](https://facebook.github.io/react/docs/top-level-api.html#react.createfactory).
