--- a/react-state/8.4.md
+++ b/react-state/8.4.md
@@ -1,6 +1,6 @@
 # Creating Stateless Function Components
 
-When a component is purely a result of `props` alone, no `state`, the component can be written as a pure function avoiding the need to create a React component instance. In the code example below `MyComponent` is the result of a function that returns the results `React.createElement()`.
+When a component is purely a result of `props` alone, no `state`, the component can be written as a pure function avoiding the need to create a React component instance. In the code example below `MyComponent` is the result of a function that returns the results from `React.createElement()`.
 
 > [source code](https://jsfiddle.net/5nzpxyuu/#tabs=js,result,html,resources)
 
