--- a/react-jsx/5.3.md
+++ b/react-jsx/5.3.md
@@ -1,6 +1,6 @@
 # Rendering JSX to DOM
 
-The `ReactDOM.render()` function can be used to render JSX expressions to the DOM. Actually, after Babel transforms the JSX all it is doing is rendering nodes created by `React.createElement()`.  Again, JSX is just a stand in experssion for having to write out the `React.createElement()` function calls.
+The `ReactDOM.render()` function can be used to render JSX expressions to the DOM. Actually, after Babel transforms the JSX all it is doing is rendering nodes created by `React.createElement()`.  Again, JSX is just a stand in expression for having to write out the `React.createElement()` function calls.
 
 In the code example I am rendering a `<li>` element and a custom `<foo-bar>` element to the DOM using JSX expressions.
 
