Fixed some typos and grammar. This closes #19

--- a/basic-react-components/6.7.md
+++ b/basic-react-components/6.7.md
@@ -1,6 +1,6 @@
 # Grokking Component Lifecycle's
 
-React components live certain life events that are called lifecycle events. These lifecycle's events are tied to lifecycle methods. I discussed several of these methods at the start of this chapter when discusses the creation of components.
+React components live certain life events that are called lifecycle events. These lifecycle's events are tied to lifecycle methods. I discussed several of these methods at the start of this chapter when discussing the creation of components.
 
 The lifecycle methods provide hooks into the phases and the nature of a component. In the code example, taken from section 6.2, I am console logging the occurrence of the lifecycle events `componentDidMount`, `componentWillUnmount`, and `getInitialState` lifecycle methods.
 
@@ -75,7 +75,7 @@ Below I show a table for each category and the containing lifecycle methods.
 
 ### Notes
 
-* `componentDidMount` and `componentDidUpdate` is a good places to put other libraries' logic.
+* `componentDidMount` and `componentDidUpdate`are good places to put other libraries' logic.
 * Read [React In-depth](https://developmentarc.gitbooks.io/react-indepth/content/life_cycle/introduction.html) for a detailed look into the React component lifecycle events
 * Mounting Phase follows this order:
 <ol>
