--- a/basic-react-components/6.9.md
+++ b/basic-react-components/6.9.md
@@ -2,7 +2,7 @@
 
 The `ref` attribute makes it possible to store a reference to a particular React element or component returned by the component `render()` configuration function. This can be valuable when you need a reference, from within a component, to some element or component contained within the `render()` function.
 
-To make a reference place the `ref` attribute with a function value on any React element or component. Then, inside of the function, the first parameter within the scope of the function will be a reference to the element or component the `ref` is on.
+To make a reference, place the `ref` attribute with a function value on any React element or component. Then, inside of the function, the first parameter within the scope of the function will be a reference to the element or component the `ref` is on.
 
 For example in the code below I am console logging the reference out for each `ref`.
 
@@ -17,7 +17,7 @@ A common use for `ref`'s are to store a reference on the component instance. In 
 ### Notes
 
 * Refs can't be attached to a stateless function because the component does not have a backing instance.
-* You might see a `ref` attribute with a string instead of a function, this is called a string `ref` and will likely be deprecated in the future. Function `ref`s are preferred.
+* You might see a `ref` attribute with a string instead of a function; this is called a string `ref` and will likely be deprecated in the future. Function `ref`s are preferred.
 * The `ref` callback function is called immediately after the component is mounted.
 * References to a component instance allow one to call custom methods on the component if any are exposed when defining it.
 * Writing refs with inline function expressions means React will see a different function object on every update, `ref` will be called with null immediately before it's called with the component instance. I.e., When the referenced component is unmounted and whenever the `ref` changes, the old `ref` will be called with `null` as an argument.
