--- a/react-props/7.2.md
+++ b/react-props/7.2.md
@@ -1,6 +1,6 @@
 # Sending Component Props
 
-Sending properties to a component entails adding HTML attribute like named values to the component when it is used, not when it is defined. For example, below the `Badge` component is define first. Then, to send a prop to the `Badge` component, `name="Bill"` is added to the component when it is used (i.e., when `<Badge name="Bill" />` is rendered).
+Sending properties to a component entails adding HTML attribute like named values to the component when it is used, not when it is defined. For example, the below `Badge` component is defined first. Then, to send a prop to the `Badge` component, `name="Bill"` is added to the component when it is used (i.e., when `<Badge name="Bill" />` is rendered).
 
 ```
 var Badge = React.createClass({
@@ -35,4 +35,4 @@ ReactDOM.render(<BadgeList />, document.getElementById('app'));
 
 #### Notes
 
-* A components properties should be consider immutable and components should not alter internally the properties sent to them from above. If you need to alter the properties of a component then a re-render should occur, don't set props by adding/updating them using `this.props.[PROP] = [NEW PROP]`.
+* A components properties should be considered immutable and components should not internally alter the properties sent to them from above. If you need to alter the properties of a component then a re-render should occur; don't set props by adding/updating them using `this.props.[PROP] = [NEW PROP]`.
