--- a/react-props/7.3.md
+++ b/react-props/7.3.md
@@ -30,7 +30,7 @@ var Badge = React.createClass({
 ReactDOM.render(React.createElement(Badge, { name: "Bill" }), document.getElementById('app'));
 ```
 
-The `{ name: "Bill" }` object is sent to the `createElement()` function along with a reference to the `Badge` component. The value, `{ name: "Bill" }` is set as an instance property value of the component accessible from the `props` property (ie. `this.props.name === "Bill"`).
+The `{ name: "Bill" }` object is sent to the `createElement()` function along with a reference to the `Badge` component. The value `{ name: "Bill" }` is set as an instance property value of the component accessible from the `props` property (ie. `this.props.name === "Bill"`).
 
 #### Notes
 
