--- a/react-props/7.4.md
+++ b/react-props/7.4.md
@@ -2,7 +2,7 @@
 
 Default props can be set when a component is being defined by using the `getDefaultProps` configuration value.
 
-In the code example below the `Badge` component has a default value for the `name` prop.
+In the code example below, the `Badge` component has a default value for the `name` prop.
 
 > [source code](https://jsfiddle.net/jv5xrqc4/#tabs=js,result,html,resources)
 
