--- a/react-props/7.6.md
+++ b/react-props/7.6.md
@@ -1,8 +1,8 @@
 # Validating Component Props
 
-To enforce the proper usage of a prop within a component props can be validated when component instances are created.
+The enforcement of the proper usage of a prop within a component props can be validated when component instances are created.
 
-When defining a component the `propTypes` configuration option can be used to identify if and how props should be validated. In the code example below I'm check to see that the `propArray` and `propObject` are in fact the correct data type and sent into the component when it is instantiated.
+When defining a component, the `propTypes` configuration option can be used to identify if and how props should be validated. In the code example below I'm checking to see that `propArray` and `propObject` are in fact the correct data types and are sent into the component when it is instantiated.
 
 > [source code](https://jsfiddle.net/jxbdodh8/#tabs=js,result,html,resources)
 
