--- a/react-state/8.1.md
+++ b/react-state/8.1.md
@@ -8,9 +8,9 @@ According to the React documentation state should:
 
 Things to keep in mind about React component state:
 
-1. If a component has a state a default state should be providing using `getInitialState()`
+1. If a component has a state, a default state should be providing using `getInitialState()`
 2. State changes are typically how you start the re-rendering of a component and all sub components (i.e., children, grandchildren, great grand chidlren etc...).
 3. You inform a component of a state change by using `this.setState()` to set a new state.
 4. A state change merges new data with old data that is already contained in the state (i.e., `this.state`)
-4. A state change, internally deals with calling re-renders. You should never have to call `this.render()` directly.
+4. A state change internally deals with calling re-renders. You should never have to call `this.render()` directly.
 5. The state object should only contain the minimal amount of data needed for the UI. Don't place computed data, other React components, or props in the state object.
