--- a/react-props/7.1.md
+++ b/react-props/7.1.md
@@ -1,6 +1,6 @@
 # What Are Component Props?
 
-The simplest way to explain component props would be to say that they function similar to HTML attributes. In other words, they props provide configuration values for the component. For example, in the code below a `Badge` component is created and it is expecting a 'name' prop to be sent when the component is instantiated.
+The simplest way to explain component props would be to say that they function similarly to HTML attributes. In other words, props provide configuration values for the component. For example, in the code below a `Badge` component is created and it is expecting a 'name' prop to be sent when the component is instantiated.
 
 > [source code](https://jsfiddle.net/codylindley/xcL8pff7/1/#tabs=js,result,html,resources)
 
@@ -39,11 +39,11 @@ ReactDOM.render(React.createElement(BadgeList, null), document.getElementById('a
 
 This is similar to how props can be set directly on React nodes (see 4.4 and 5.7). However, when the `createElement()` function is passed a component definition (i.e., `Badge`) instead of a node, the props become available on the component itself (i.e., `this.props.name`). Component props make it possible to re-use the Badge component with any name.
 
-In the previous code example examined in this section the `BadgeList` component uses two `Badge` components each with there own `this.props` object. We can verify this by console logging out the value of `this.props` when a `Badge` component is instantiated.
+In the previous code example examined in this section, the `BadgeList` component uses two `Badge` components each with their own `this.props` object. We can verify this by console logging out the value of `this.props` when a `Badge` component is instantiated.
 
 > [source code](https://jsfiddle.net/codylindley/Lv1zaudj/2/#tabs=js,result,html,resources)
 
-Basically every React component instance has a unique instance property call `props` that starts as an empty JavaScript object. The empty object can get filled, by a parent component, with any JavaScript value/ reference. These values are then used by the component or passed on to child components.
+Basically every React component instance has a unique instance property called `props` that starts as an empty JavaScript object. The empty object can get filled, by a parent component, with any JavaScript value/ reference. These values are then used by the component or passed on to child components.
 
 #### Notes
 
