fix issue with text and jsfiddle

--- a/basic-react-components/6.8.md
+++ b/basic-react-components/6.8.md
@@ -1,6 +1,6 @@
 # Accessing Children Components/Nodes
 
-If a component, when used, contains child components or React nodes inside of the component (e.g., `<Parent><Child /></Parent>` or `<Parent><span>test<span></Parent>`) these React node or component instances can be accessed by using `this.props.children`.
+If a component, when used, contains child React components or React nodes inside of the component (e.g., `<Parent><Child /></Parent>` or `<Parent><span>test<span></Parent>`) these React node or component instances can be accessed by using `this.props.children`.
 
 In the code below the `Parent` component when used, contains two `<div>` React node children, which contains React text nodes. All of the children instances, inside of the component are accessible using `this.props.children`. In the code below I access these children inside of the `Parent` `componentDidMount` lifecycle function.
 
