--- a/basic-react-components/6.6.md
+++ b/basic-react-components/6.6.md
@@ -8,6 +8,6 @@ In the code below the `BadgeList` component contains/owns the `BadgeBill` and `B
 
 ### Notes
 
-* This code was purposefully simplistic in order to demonstrate component composition. In the next chapter, we will look at how the code will typically be written making use of props to create a generic `Badge` component. The generic Badge component can  take any name value v.s. creating a unique badge and hard coding the name in the component.
-* A key tenet of maintainable front-ends composable components. React components by design are meant to contain other React components.
+* This code was purposefully simplistic in order to demonstrate component composition. In the next chapter, we will look at how the code will typically be written making use of props to create a generic `Badge` component. The generic Badge component can take any name value v.s. creating a unique badge and hard coding the name in the component.
+* A key tenet of maintainable UI are composable components. React components by design are meant to contain other React components.
 * Notice how HTML and previously defined components are mixed together in the `render()` configuration function.
