--- a/basic-react-components/6.5.md
+++ b/basic-react-components/6.5.md
@@ -152,7 +152,7 @@ shiftKey,
 #### Notes
 
 * React normalizes events so that they behave consistently across different browsers.
-* Events in React are triggered on the bubbling phase. To trigger an event on the capturing phase add the word "Capture" to the event name (e.g., `onClick` would become `onClickCapture`).
+* Events in React are triggered on the bubbling phase. To trigger an event on the capturing phase add the word "Capture" to the end of the event name (e.g., `onClick` would become `onClickCapture`).
 * If you need the browser event details for a given event you can access this by using the `nativeEvent` property found in the SyntheticEvent object passed into React event hander/callbacks.
 * React does not actually attach events to the nodes themselves, it uses [event delegation](http://domenlightenment.com/#11.14).
 * `e.stopPropagation()` or `e.preventDefault()` should be triggered manually to [stop](http://domenlightenment.com/#11.9) event [propagation](http://domenlightenment.com/#11.10) instead of `returning false;`.
