--- a/basic-react-components/6.2.md
+++ b/basic-react-components/6.2.md
@@ -4,18 +4,18 @@ A React component that will potentially contain `state` can be created by callin
 
 <table>
   <tr>
-    <td><a href="http://facebook.github.io/react/docs/component-specs.html#render"><code>render</code></a></td>
+    <td><a href="http://facebook.github.io/react/docs/component-specs.html#render"><code>render()</code></a></td>
     <td>A required value, typically a function that returns React nodes, other React components, or <code>null</code>/<code>false</code></td>
   </tr>
 
   <tr>
-    <td><a href="http://facebook.github.io/react/docs/component-specs.html#getinitialstate"><code>getInitialState</code></a></td>
-    <td>Object containing initial value of <code>this.state</code></td>
+    <td><a href="http://facebook.github.io/react/docs/component-specs.html#getinitialstate"><code>getInitialState()</code></a></td>
+    <td>Function which returns an object containing initial value of <code>this.state</code></td>
   </tr>
 
   <tr>
-  <td><a href="http://facebook.github.io/react/docs/component-specs.html#getdefaultprops"><code>getDefaultProps</code></a></td>
-  <td> Object containing values to be set on <code>this.props</code></td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#getdefaultprops"><code>getDefaultProps()</code></a></td>
+  <td>Function which returns an object containing values to be set on <code>this.props</code></td>
 </tr>
 
 <tr>
@@ -39,37 +39,37 @@ A React component that will potentially contain `state` can be created by callin
 </tr>
 
 <tr>
-  <td><a href="http://facebook.github.io/react/docs/component-specs.html#displayname"><code>componentWillMount</code></a></td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#displayname"><code>componentWillMount()</code></a></td>
   <td>Callback function invoked once immediately before the initial rendering occurs</td>
 </tr>
 
 <tr>
-  <td><a href="http://facebook.github.io/react/docs/component-specs.html#mounting-componentdidmount"><code>componentDidMount</code></a></td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#mounting-componentdidmount"><code>componentDidMount()</code></a></td>
   <td>Callback function invoked immediately after the initial rendering occurs</td>
 </tr>
 
 <tr>
-  <td><a href="http://facebook.github.io/react/docs/component-specs.html#updating-componentwillreceiveprops"><code>componentWillReceiveProps</code></a></td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#updating-componentwillreceiveprops"><code>componentWillReceiveProps()</code></a></td>
   <td>Callback function invoked when a component is receiving new props</td>
 </tr>
 
 <tr>
-  <td><a href="http://facebook.github.io/react/docs/component-specs.html#updating-shouldcomponentupdate"><code>shouldComponentUpdate</code></a></td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#updating-shouldcomponentupdate"><code>shouldComponentUpdate()</code></a></td>
   <td>Callback function invoked before rendering when new props or state are being received</td>
 </tr>
 
 <tr>
-  <td><a href="http://facebook.github.io/react/docs/component-specs.html#updating-componentwillupdate"><code>componentWillUpdate</code></a></td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#updating-componentwillupdate"><code>componentWillUpdate()</code></a></td>
   <td>Callback function invoked immediately before rendering when new props or state are being received.</td>
 </tr>
 
 <tr>
-  <td><a href="http://facebook.github.io/react/docs/component-specs.html#updating-componentdidupdate"><code>componentDidUpdate</code></a></td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#updating-componentdidupdate"><code>componentDidUpdate()</code></a></td>
   <td>Callback function invoked immediately after the component&#39;s updates are flushed to the DOM</td>
 </tr>
 
 <tr>
-  <td><a href="http://facebook.github.io/react/docs/component-specs.html#unmounting-componentwillunmount"><code>componentWillUnmount</code></a></td>
+  <td><a href="http://facebook.github.io/react/docs/component-specs.html#unmounting-componentwillunmount"><code>componentWillUnmount()</code></a></td>
   <td>Callback function invoked immediately before a component is unmounted from the DOM</td>
 </tr>
 </table>
